[package]
name = "subway-surfers-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "subway-surfers-bot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
opencv = "0.92"
onnxruntime = "0.0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
image = "0.24"
ndarray = "0.15"
thiserror = "1.0"
